Added email service

--- a/GamePlanner/Templates/ConfirmReservationEmailTemplate.html
+++ b/GamePlanner/Templates/ConfirmReservationEmailTemplate.html
@@ -62,7 +62,7 @@
         </p>
 
         <div class="code-box">
-            {{code}}
+            <a href="{{code}}">Confirm Reservation</a>
         </div>
 
         <p>Se non hai richiesto questo codice, ignora questa email.</p>
