Created application user controller

--- a/GamePlanner/Templates/ConfirmReservationEmailTemplate.html
+++ b/GamePlanner/Templates/ConfirmReservationEmailTemplate.html
@@ -62,7 +62,7 @@
         </p>
 
         <div class="code-box">
-            <a href="{{code}}">Confirm reservation</a>
+            <a href="{{url}}">Confirm reservation</a>
         </div>
 
         <p>If you did not request this code, please ignore this email.</p>
