--- a/GamePlanner/Templates/ConfirmReservationEmailTemplate.html
+++ b/GamePlanner/Templates/ConfirmReservationEmailTemplate.html
@@ -55,6 +55,10 @@
             color: #777;
             margin-top: 20px;
         }
+
+        a {
+            color: white;
+        }
     </style>
 </head>
 <body>
