--- a/GamePlanner/Templates/ConfirmReservationEmailTemplate.html
+++ b/GamePlanner/Templates/ConfirmReservationEmailTemplate.html
@@ -72,7 +72,7 @@
 
         <p>
             Thank you for making a reservation. To confirm your reservation, please click the button below.
-            This confirmation link is valid only for one hour, so please confirm as soon as possible.
+            This confirmation link is valid only for half an hour, so please confirm as soon as possible.
         </p>
 
         <div class="code-box">
