--- a/GamePlanner/Templates/DeleteReservationEmailTemplate.html
+++ b/GamePlanner/Templates/DeleteReservationEmailTemplate.html
@@ -79,7 +79,7 @@
             <a href="{{url}}" class="delete-button">Delete Reservation</a>
         </div>
 
-        <p>If you did not request to delete this reservation, please disregard this email.</p>
+        <p>If you do not want to delete this reservation, please ignore this email.</p>
 
         <div class="footer">
             <p>This is an automated message; please do not reply.</p>
